--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
     {% include offcanvas.html %}
 
     <script src="/assets/js/vendor/uikit-icons.js"></script>
+    <script src="/assets/js/custom.js"></script>
     </body>
 
 </html>
