--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   {% include head-custom.html %}
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/css/all.min.css" | relative_url }}">
   <link rel="shortcut icon" type="image/png" href="{{ site.favicon}}" >
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <script src="{{ "/assets/js/main.min.js" | relative_url }}"></script>
