--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 
     <script src="/assets/js/vendor/uikit-icons.js"></script>
     <script src="/assets/js/custom.js"></script>
+    <script src="/assets/js/all.min.js"></script>
     </body>
 
 </html>
