--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" type="image/png" href="{{ site.favicon}}" >
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
   <script src="{{ "/assets/js/main.min.js" | relative_url }}"></script>
+  <script src=“https://kit.fontawesome.com/be4dd01ccc.js” crossorigin=“anonymous”></script>
   {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include google-analytics.html %}
   {% endif %}
