--- a/_includes/section-ad.html
+++ b/_includes/section-ad.html
@@ -11,9 +11,10 @@
             <img src="/uploads/hope-logo.png" alt="hope-logo" class="hope-logo">
         </div>
         <div class="uk-text-center@xl" style="margin-top:40px">
-            <h1>Scripture. Stillness. Hope</h1>
-            <h2>Explore ancient Christian meditation that guides you to
-            <br>slow down, hear God, and find spiritual rest in scripture.</h2>
+            <h1>Scripture. Stillness. Hope.</h1>
+            <h2>Discover a Christian meditation practice rooted in ancient
+            <br>tradition that helps you slow down, listen for God,
+            <br>and find rest in Scripture.</h2>
             <a class="uk-button uk-button-primary uk-button-large rounded" uk-toggle="target: #subscribe-modal" type="button">Stay in Touch</a>
         </div>
     </div>
