--- a/_includes/section-latest.html
+++ b/_includes/section-latest.html
@@ -13,7 +13,7 @@
       {% assign site_url = n.url %}
       {% unless site_name == 'website' %}
       <div class="uk-card uk-card-default uk-card-body">
-          <a class="uk-margin-large" href="{{ site_url }}" {% if forloop.first %} style="margin: 0px; padding: 0px; box-shadow: none;"{% endif %}>
+          <a class="uk-margin-large icons" href="{{ site_url }}" {% if forloop.first %} style="margin: 0px; padding: 0px; box-shadow: none;"{% endif %}>
             <i class="uk-position-center {{ n.icon }} fa-2xl" style="height: 60px; width: 60px"></i>
           </a>
         <div class="uk-text-center social-site-title">
@@ -37,20 +37,17 @@
   </div>
 {%- endif -%}
 
-{% assign favs = "Foundation,Daily_Hope,Nightly_Wind_Down,Positive_Affirmations,Everyday_Miracles,Finding_Purpose" | split: "," %}
-{% assign favs_urls = "/category/meditations/foundations/,/category/daily-hope/,/category/nightly-wind-down/,/category/meditations/positive-affirmations/,/category/everyday-miracles/,/bible/" | split: "," %}
-{% assign favs_icons = "home,happy,eye-slash,eye,world,pencil" | split: "," %}
-
 <div class="uk-container uk-margin-medium-bottom">
   <div class="uk-child-width-1-3@l" uk-grid>
-    {% for item in favs %}
-    {% assign url = favs_urls[forloop.index0] %}
-    {% assign icon = favs_icons[forloop.index0] %}
+    {% for item in site.favorite_tabs %}
+    {% assign favs = item.tab %}
+    {% assign url = favs.url %}
+    {% assign icon = favs.icon %}
     <a href="{{ url }}">
-      <div class="uk-card uk-card-default uk-card-body">
+      <div class="uk-card uk-card-default uk-card-body favorites-tabs">
         <div uk-grid>
-          <h3 class="">{{ item | replace: "_", " " }}</h3>
-          <span class="uk-position-center-right" data-uk-icon="icon: {{ icon }}; ratio: 2"></span>
+          <h3 class="">{{ favs.name }}</h3>
+          <span class="uk-position-center-right {{ favs.icon }} fa-2xl favorites-icons" style="padding-right: 1rem !important;"></span>
         </div>
       </div>
     </a>
@@ -64,7 +61,7 @@
 <div class="uk-padding-large social-block">
 <div class="uk-container uk-margin-medium-bottom">
   <hr class="uk-margin-remove">
-  <h2 class="section-title uk-text-center uk-margin">Let's Get Social</h2>
+  <h2 class="section-title uk-text-center uk-margin">Follow Us!</h2>
   <hr class="uk-margin-remove">
 </div>
   <div class="">
@@ -75,8 +72,8 @@
       {% assign site_url = social_site[1] %}
       {% unless site_name == 'website' %}
       <div class="uk-card uk-card-default uk-card-body">
-          <a class="uk-margin-large" href="{{ site_url }}" {% if forloop.first %} style="margin: 0px; padding: 0px; box-shadow: none;"{% endif %}>
-            <div class="uk-position-center" data-uk-icon="icon:{% unless site_name == 'email' or site_name == 'website' %} {{ site_name }}{% elsif site_name == 'email' %}mail{% elsif site_name == 'website' %}link-external{% endunless %}; ratio: 3"></div>
+          <a class="uk-margin-large icons" href="{{ site_url }}" {% if forloop.first %} style="margin: 0px; padding: 0px; box-shadow: none;"{% endif %}>
+            <div class="uk-position-center icons" data-uk-icon="icon:{% unless site_name == 'email' or site_name == 'website' %} {{ site_name }}{% elsif site_name == 'email' %}mail{% elsif site_name == 'website' %}link-external{% endunless %}; ratio: 3"></div>
           </a>
         <div class="uk-text-center social-site-title">
           <h6>{% unless site_name == 'email' %}{{ site_name | capitalize }}{% else %}Newsletter{% endunless %}</h6>
