--- a/_sass/theme/variables.scss
+++ b/_sass/theme/variables.scss
@@ -1,5 +1,5 @@
 // Modify primary template color
-$global-primary-background: #0d9488;
+$global-primary-background: #266467;
 // Modify body font
 $global-font-family: 'Lora', serif; 
 // Modify article title font
