changed text to white, fixed cutoff svgs

--- a/_includes/section-latest.html
+++ b/_includes/section-latest.html
@@ -46,8 +46,8 @@
     <a href="{{ url }}">
       <div class="uk-card uk-card-default uk-card-body favorites-tabs">
         <div uk-grid>
-          <h3 class="">{{ favs.name }}</h3>
-          <span class="uk-position-center-right {{ favs.icon }} fa-2xl favorites-icons" style="padding-right: 1rem !important;"></span>
+          <h3 class="favorites-text">{{ favs.name }}</h3>
+          <span class="uk-position-center-right {{ favs.icon }} favorites-icons" style="padding-right: 1rem !important;"></span>
         </div>
       </div>
     </a>
