--- a/_layouts/category-overview.html
+++ b/_layouts/category-overview.html
@@ -7,7 +7,7 @@ layout: default
 {% assign subcategories = "" %}
 {% for post in category_posts %}
     {% for category in post.categories %}
-        {% unless category == "Meditations" or category == "Life" or category == "Carpe Diem" or category == "Health" or category == "Moments" or category == "Difficulty" or category == "Sports & rec" or category == "Virtues" %}
+        {% unless category == "Meditations" or category == "Life" or category == "Carpe Diem" or category == "Carpe diem" or category == "Health" or category == "Moments" or category == "Difficulty" or category == "Sports & rec" or category == "Virtues" %}
             {% assign subcategories = subcategories | append: category | append: "," %}
         {% endunless %}
 {% endfor %}
@@ -22,6 +22,7 @@ layout: default
         <p>Explore guided meditations designed to meet you wherever you are in your spiritual journey. Each category focuses on a specific need such as depression, anxiety, happiness, or finding your purpose, offering a meditative path shaped by scripture and the Christian contemplative tradition. Every session helps you slow down, breathe deeply, and listen for God’s voice in the midst of your circumstances. Whether you are seeking comfort, clarity, encouragement, or renewal, these meditations provide a gentle space to rest in God’s presence and anchor your heart in His word.</p>
         <hr/>
         <div class="uk-container uk-margin-large-top uk-margin-medium-bottom">
+            {% if page.tag == "Meditations" %}
             <div class="uk-flex uk-flex-center uk-flex-left@l">
                 <div class="uk-inline uk-padding-small uk-padding-remove-left uk-padding-remove-right uk-margin-medium-bottom">
                     <a type="button" class="uk-button uk-button-default">Categories</a>
@@ -52,6 +53,7 @@ layout: default
                     </div>
                 </div>
             </div>
+            {% endif %}
             <ul class="js-filter uk-grid-small uk-child-width-1-3@s uk-child-width-1-3@m uk-child-width-1-3@l uk-grid-match" uk-grid>
                 {% assign post_count = 0 %}
                 {% for subcategory in subcategories %}
@@ -76,9 +78,11 @@ layout: default
                 {% endfor %}
                 {% endfor %}
             </ul>
+            {% if post_count >= 30 %}
             <div class="uk-text-center">
                 <a class="loadmore-button uk-button uk-button-default" uk-toggle="target: .more-content" onclick="this.style.display='none'">LOAD MORE CONTENT</a>
             </div>
+            {% endif %}
         </div>
     </div>
 {% assign footer_text = "" %}
